--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ body {
   font-size: 16px;
 }
 textarea {
-  height: 50%;
+  height: 500px;
   padding: 8px;
   width: 100%;
   font-family: "Courier New", Courier, monospace;
@@ -26,6 +26,7 @@ textarea {
 <button onclick="run()">Run</button>
 <button onclick="share()">Share</button>
 <textarea id="logs" spellcheck="false"></textarea>
+<canvas id="canvas" width="300" height="150"></canvas>
 <script>
 document.getElementById("code").value = decodeURI(window.location.search.substring(1))
 console.logOrig = console.log
