--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
   <script src="peaches.js"></script>
 </head>
 <body>
-  <button onclick="run()">Run</button>
-  <button onclick="share()">Share</button>
-  <textarea id="code" spellcheck="false"></textarea>
-  <div class="h-divider"></div>
-  <textarea id="output" class="console-panel" spellcheck="false" readonly></textarea>
+  <div class="main">
+    <div>
+      <button onclick="run()">Run</button>
+      <button onclick="share()">Share</button>
+    </div>
+    <textarea id="code" spellcheck="false"></textarea>
+    <div class="h-divider"></div>
+    <textarea id="output" class="console-panel" spellcheck="false" readonly></textarea>
+  </div>
 </body>
 </html>
