Using code element for output

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <textarea id="code" spellcheck="false"></textarea>
     <div class="h-divider"></div>
-    <textarea id="output" class="console-panel" spellcheck="false" readonly></textarea>
+    <pre class="footer"><code id="output"></code id="output"></pre>
   </div>
 </body>
 </html>
