--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
   <div class="main">
-    <div>
+    <div class="header">
       <button onclick="run()">Run</button>
       <button onclick="share()">Share</button>
     </div>
     <textarea id="code" spellcheck="false"></textarea>
     <div class="h-divider"></div>
-    <pre class="footer"><code id="output"></code id="output"></pre>
+    <pre class="console"><code id="output"></code id="output"></pre>
   </div>
 </body>
 </html>
