--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="header">
       <button onclick="run()">Run</button>
       <button onclick="share()">Share</button>
+      <input id="share-link" type="url">
     </div>
     <textarea id="code" spellcheck="false"></textarea>
     <div class="h-divider"></div>
