Testing forwarding to page with shorter name

--- a/index.html
+++ b/index.html
@@ -1,21 +1,9 @@
 <html>
 <head>
   <title>Peaches</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-  <script src="jquery-linedtextarea.js"></script>
-  <script src="peaches.js"></script>
+  <meta http-equiv="refresh" content="0;url="i.html" />
 </head>
 <body>
-  <div class="main">
-    <div class="header">
-      <button onclick="run()">Run</button>
-      <button onclick="share()">Share</button>
-      <input id="share-link" type="url">
-    </div>
-    <textarea id="code" spellcheck="false"></textarea>
-    <div class="h-divider"></div>
-    <pre class="console"><code id="output"></code id="output"></pre>
-  </div>
+<h1>hi</h1>
 </body>
 </html>
