Revert "Just i experiment"
This reverts commit e2a955d2ffa47c4b94e34a6e31aacd0e6d930743.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>Peaches</title>
-  <meta http-equiv="refresh" content="0;url=i" />
+  <meta http-equiv="refresh" content="0;url=i.html" />
 </head>
 <body>
 <h1>hi</h1>
