--- a/i.html
+++ b/i.html
@@ -1,9 +1,11 @@
 <html>
 <head>
   <title>Peaches</title>
+  <link rel="stylesheet" href="lib/codemirror-5.50.2/codemirror.css">
   <link rel="stylesheet" href="style.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-  <script src="jquery-linedtextarea.js"></script>
+  <script src="lib/codemirror-5.50.2/codemirror.js"></script>
+  <script src="lib/codemirror-5.50.2/mode/javascript/javascript.js"></script>
+  <script src="lib/jquery-1.8.2/jquery.min.js"></script>
   <script src="peaches.js"></script>
 </head>
 <body>
@@ -14,7 +16,6 @@
       <input id="share-link" type="url">
     </div>
     <textarea id="code" spellcheck="false"></textarea>
-    <div class="h-divider"></div>
     <pre class="console"><code id="output"></code id="output"></pre>
   </div>
 </body>
