Shorter url suffix

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>Peaches</title>
-  <meta http-equiv="refresh" content="0;url=i.html" />
+  <meta http-equiv="refresh" content="0;url=i.htm" />
 </head>
 <body>
 </body>
