--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <input id="share-link" type="url">
     </div>
     <textarea id="code" spellcheck="false"></textarea>
-    <pre class="console"><code id="output"></code id="output"></pre>
+    <pre class="console"><code id="output"></code></pre>
   </div>
 </body>
 </html>
