--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 
 <head>
   <title>Peaches</title>
-  <link rel="stylesheet" href="lib/codemirror-5.50.2/codemirror.css">
+  <link rel="stylesheet" href="lib/codemirror/codemirror.css">
   <link rel="stylesheet" href="style.css">
-  <script src="lib/codemirror-5.50.2/codemirror.js"></script>
-  <script src="lib/codemirror-5.50.2/mode/javascript/javascript.js"></script>
-  <script src="lib/jquery-1.8.2/jquery.min.js"></script>
+  <script src="lib/lz-string.js"></script>
+  <script src="lib/codemirror/codemirror.js"></script>
+  <script src="lib/codemirror/mode/javascript/javascript.js"></script>
+  <script src="lib/jquery.min.js"></script>
   <script src="peaches.js"></script>
 </head>
 
